fixed wrap issue

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -174,6 +174,7 @@ button.delete {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 
     font-size: 30px;
     font-weight: 450;
